--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   nginx-s3-gateway:
@@ -7,48 +7,48 @@ services:
     depends_on:
       minio:
         condition: service_healthy
-    image: "nginx-s3-gateway"
+    image: 'nginx-s3-gateway'
     ports:
-      - "8989:${NGINX_INTERNAL_PORT-80}/tcp"
+      - '8989:${NGINX_INTERNAL_PORT-80}/tcp'
     links:
-      - "minio"
-    restart: "no"
+      - 'minio'
+    restart: 'no'
     environment:
-      S3_BUCKET_NAME: "bucket-1"
-      AWS_ACCESS_KEY_ID: "AKIAIOSFODNN7EXAMPLE"
-      AWS_SECRET_ACCESS_KEY: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
-      S3_SERVER: "minio"
-      S3_SERVER_PORT: "9000"
-      S3_SERVER_PROTO: "http"
-      S3_REGION: "us-east-1"
-      DEBUG: "true"
-      S3_STYLE: "virtual"
+      S3_BUCKET_NAME: 'bucket-1'
+      AWS_ACCESS_KEY_ID: 'AKIAIOSFODNN7EXAMPLE'
+      AWS_SECRET_ACCESS_KEY: 'wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY'
+      S3_SERVER: 'minio'
+      S3_SERVER_PORT: '9000'
+      S3_SERVER_PROTO: 'http'
+      S3_REGION: 'us-east-1'
+      DEBUG: 'true'
+      S3_STYLE: 'virtual'
       ALLOW_DIRECTORY_LIST:
       PROVIDE_INDEX_PAGE:
       APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
       AWS_SIGS_VERSION:
       STATIC_SITE_HOSTING:
-      PROXY_CACHE_MAX_SIZE: "10g"
-      PROXY_CACHE_INACTIVE: "60m"
-      PROXY_CACHE_VALID_OK: "1h"
-      PROXY_CACHE_VALID_NOTFOUND: "1m"
-      PROXY_CACHE_VALID_FORBIDDEN: "30s"
+      PROXY_CACHE_MAX_SIZE: '10g'
+      PROXY_CACHE_INACTIVE: '60m'
+      PROXY_CACHE_VALID_OK: '1h'
+      PROXY_CACHE_VALID_NOTFOUND: '1m'
+      PROXY_CACHE_VALID_FORBIDDEN: '30s'
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-06-09T07-32-12Z
     ports:
-      - "9090:9000/tcp"
-    restart: "no"
+      - '9090:9000/tcp'
+    restart: 'no'
     command: minio server /data
     environment:
       MINIO_ADDRESS: :9000
-      MINIO_ROOT_USER: "AKIAIOSFODNN7EXAMPLE"
-      MINIO_ROOT_PASSWORD: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
-      MINIO_REGION_NAME: "us-east-1"
-      MINIO_DOMAIN: "minio"
-      MINIO_BROWSER: "off"
+      MINIO_ROOT_USER: 'AKIAIOSFODNN7EXAMPLE'
+      MINIO_ROOT_PASSWORD: 'wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY'
+      MINIO_REGION_NAME: 'us-east-1'
+      MINIO_DOMAIN: 'minio'
+      MINIO_BROWSER: 'off'
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
       interval: 5s
       timeout: 3s
       retries: 3
